# NeoRL

NeoRL/: CMakeLists.txt  FindOpenCL.cmake  build.sh  clean_cmake.sh
NeoRL/cmake/: FindGNUWIN.cmake  FindSFML.cmake
NeoRL/resources/: neoKernels.cl
NeoRL/source/: SequenceRecall.cpp  Settings.h  SinusExample.cpp  SparseCoding.cpp
NeoRL/source/neo/: AgentSPG.cpp  AgentSwarm.cpp  ComparisonSparseCoder.cpp  Helpers.cpp  Helpers.h  PredictiveHierarchy.cpp  Predictor.cpp  PredictorSwarm.cpp  SparseCoder.cpp  Swarm.cpp
NeoRL/source/runner/: Runner.cpp
NeoRL/source/system/: ComputeSystem.h
